support newlines. This solves various issues but also means that they
no longer support HTML markup, can be accessed as DOM elements or
styled directly with CSS. Some older browsers lack this function of
the canvas API (this doesn't affect IE); if this is a problem, either
continue using an older version of Flot or try an emulation helper
such as canvas-text or Flashcanvas.



Changes:

- Canvas text support for labels (sponsored by YCharts.com).

- Support for setting the interval between redraws of the overlay
  canvas with redrawOverlayInterval (suggested in issue 185).

- Support for multiple thresholds in thresholds plugin (patch by
  Arnaud Bellec, issue 523).

Bug fixes

- Fix problem with null values and pie plugin (patch by gcruxifix,
  issue 500).
- Fix problem with threshold plugin and bars (based on patch by
  kaarlenkaski, issue 348).
- Fix axis box calculations so the boxes include the outermost part of
  the labels too.
- Fix problem with event clicking and hovering in IE 8 by updating
  Excanvas and removing previous work-around (test case by Ara
  Anjargolian).
- Fix issues with blurry 1px border when some measures aren't integer
  (reported by Ara Anjargolian).


Flot 0.7
--------

API changes:

Multiple axes support. Code using dual axes should be changed from
using x2axis/y2axis in the options to using an array (although
backwards-compatibility hooks are in place). For instance,

  {
    xaxis: { ... }, x2axis: { ... },
    yaxis: { ... }, y2axis: { ... }
  }

becomes

  {
    xaxes: [ { ... }, { ... } ],
    yaxes: [ { ... }, { ... } ]
  }

Note that if you're just using one axis, continue to use the
xaxis/yaxis directly (it now sets the default settings for the
arrays). Plugins touching the axes must be ported to take the extra
axes into account, check the source to see some examples.

A related change is that the visibility of axes is now auto-detected.
So if you were relying on an axis to show up even without any data in